# Sandbox

BMPLoader/: .gitignore  CMakeLists.txt  CMakePresets.json
BMPLoader/src/: CMakeLists.txt
BMPLoader/src/domain/: CMakeLists.txt
BMPLoader/src/domain/common/: CMakeLists.txt
BMPLoader/src/domain/common/include/: event_sink.hpp
BMPLoader/src/domain/common/src/: event_sink.cpp
BMPLoader/src/domain/graphics2d/: CMakeLists.txt
BMPLoader/src/domain/graphics2d/include/: image.hpp  pixel.hpp  pixel_buffer.hpp
BMPLoader/src/domain/graphics2d/src/: image.cpp  pixel.cpp  pixel_buffer.cpp
BMPLoader/src/infra/: CMakeLists.txt
BMPLoader/src/infra/application/: CMakeLists.txt
BMPLoader/src/infra/application/include/: event_bus.hpp
BMPLoader/src/infra/application/src/: event_bus.cpp
BMPLoader/src/infra/codecs/: CMakeLists.txt
BMPLoader/src/infra/codecs/include/: bmp.hpp
BMPLoader/src/infra/codecs/src/: bmp.cpp
BMPLoader/src/presentation/: CMakeLists.txt
BMPLoader/src/presentation/entrypoint/: CMakeLists.txt
BMPLoader/src/presentation/entrypoint/src/: main.cpp
BMPLoader/src/presentation/settings/: CMakeLists.txt
BMPLoader/src/presentation/settings/include/: arguments.hpp
BMPLoader/src/presentation/settings/src/: arguments.cpp
BMPLoader/test/: CMakeLists.txt  bmp_tests.cpp  image_tests.cpp
